--- a/Package.json
+++ b/Package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/BitNetwork/Tilde/issues"
   },
-  "homepage": "https://github.com/BitNetwork/Tilde#readme"
+  "homepage": "https://github.com/GamersGotPower/SatanicBot"
 }
