--- a/Package.json
+++ b/Package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BitNetwork/Tilde.git"
+    "url": "git+https://github.com/GamersGotPower/SatanicBot.git"
   },
   "keywords": [
     "discord",
